spec/v1/examples/data/rendered/apps/platform-postgres/networkpolicy.yaml
# GENERATED. Never hand-edit.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres
  namespace: data-system
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/part-of: platform-postgres
    app.kubernetes.io/managed-by: deploy-kit
    app.kubernetes.io/component: none
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: postgres
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: auth-system
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: auth-api
    ports:
    - protocol: TCP
      port: 5432
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: knowledge-system
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: knowledge-api
    ports:
    - protocol: TCP
      port: 5432
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: knowledge-system
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: knowledge-ingest-worker
    ports:
    - protocol: TCP
      port: 5432
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: utility-system
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: prometheus
    ports:
    - protocol: TCP
      port: 9187
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: utility-system
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: vault
    ports:
    - protocol: TCP
      port: 8200
